--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,11 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v2
 
+        - name: Set up Python 3.11
+          uses: actions/setup-python@v2
+          with:
+              python-version: 3.11
+
         - name: Install dependencies
           run: |
               echo "Installing dependencies"
