--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,9 +13,12 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Set up Python 3.11
-          uses: actions/setup-python@v2
+          uses: actions/setup-python@v4
           with:
               python-version: 3.11
+
+        - name: Install Poetry
+          uses: snok/install-poetry@v1
 
         - name: Install dependencies
           run: |
